--- a/site.yml
+++ b/site.yml
@@ -22,6 +22,7 @@ asciidoc:
   attributes:
     idprefix: ''
     idseparator: '-'
+    experimental: ''
     latest-version: 2.8
     previous-version: 2.7
   extensions:
