--- a/site.yml
+++ b/site.yml
@@ -23,8 +23,12 @@ asciidoc:
     idprefix: ''
     idseparator: '-'
     experimental: ''
+    # delete block
     latest-version: 2.8
     previous-version: 2.7
+    # delete block
+    latest-desktop-version: 2.8
+    previous-desktop-version: 2.7
   extensions:
     - ./lib/extensions/tabs.js
     - ./node_modules/asciidoctor-kroki/src/asciidoctor-kroki.js
