[2.7] [PR 95] Make the doc URL to use \"next\" when the branch is master
Backport of PR #95

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,9 @@
 name: desktop
 title: Desktop Client
-version: 2.7
+version: 'next'
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/nav.adoc
+
+asciidoc:
+  attributes:
