--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,9 @@
 name: desktop
 title: Desktop Client
-version: 'master'
+version: 'next'
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/nav.adoc
+
+asciidoc:
+  attributes:
