--- a/site.yml
+++ b/site.yml
@@ -27,4 +27,5 @@ asciidoc:
     previous-desktop-version: 2.8
   extensions:
     - ./lib/extensions/tabs.js
+    - ./lib/extensions/remote-include-processor.js
     - ./node_modules/asciidoctor-kroki/src/asciidoctor-kroki.js
