Fix the family directory structure

--- a/antora.yml
+++ b/antora.yml
@@ -3,7 +3,7 @@ title: Desktop Client
 version: 'next'
 start_page: ROOT:index.adoc
 nav:
-- modules/ROOT/nav.adoc
+- modules/ROOT/partials/nav.adoc
 
 asciidoc:
   attributes:
