[5.2] [PR 567] Antora 3.1 upgrade
Backport of PR #567

--- a/antora.yml
+++ b/antora.yml
@@ -7,3 +7,5 @@ nav:
 
 asciidoc:
   attributes:
+    latest-desktop-version: {page-component-version}   # do not change, this is the value of the version key
+    previous-desktop-version: {page-component-version} # do not change, this is the value of the version key
