--- a/site.yml
+++ b/site.yml
@@ -30,10 +30,22 @@ asciidoc:
     experimental: true
     # Antora pagination (prev page, next page)
     page-pagination: true
+#   common
+    docs-base-url: 'https://doc.owncloud.com'
+    oc-complete-base-url: 'https://download.owncloud.com/server/stable'
+    oc-contact-url: 'https://owncloud.com/contact/'
+    oc-help-url: 'https://owncloud.com/docs-guides/'
+    oc-marketplace-url: 'https://marketplace.owncloud.com'
+    oc-central-url: 'https://central.owncloud.org'
+    oc-support-url: 'https://owncloud.com/support'
 #   desktop
-    latest-desktop-version: '5.2'
-    previous-desktop-version: '5.1'
+    latest-desktop-version: 'next@'   # do not change, soft set, correctly defined via antora.yml
+    previous-desktop-version: 'next@' # do not change, soft set, correctly defined via antora.yml
   extensions:
-    - ./lib/extensions/tabs.js
-    - ./lib/extensions/remote-include-processor.js
-    - ./node_modules/asciidoctor-kroki/src/asciidoctor-kroki.js
+    - ./ext-asciidoc/tabs.js
+    - ./ext-asciidoc/remote-include-processor.js
+    - asciidoctor-kroki
+
+antora:
+  extensions:
+    - ./ext-antora/generate-index.js
